chtl/gen/CHTLParser.java
// Generated from /workspace/chtl/grammar/CHTL.g4 by ANTLR 4.13.1
package chtl.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CHTLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KEYWORD_TEXT=1, KEYWORD_STYLE=2, KEYWORD_SCRIPT_KW=3, KEYWORD_TEMPLATE=4, 
		KEYWORD_CUSTOM=5, KEYWORD_ORIGIN=6, KEYWORD_CONFIGURATION=7, KEYWORD_IMPORT=8, 
		KEYWORD_NAMESPACE=9, KEYWORD_HTML=10, KEYWORD_HEAD=11, KEYWORD_BODY=12, 
		KEYWORD_DIV=13, KEYWORD_SPAN=14, KEYWORD_BUTTON=15, KEYWORD_INHERIT=16, 
		KEYWORD_DELETE=17, KEYWORD_INSERT=18, KEYWORD_AFTER=19, KEYWORD_BEFORE=20, 
		KEYWORD_REPLACE=21, KEYWORD_AT=22, TOP_KW=23, BOTTOM_KW=24, KEYWORD_FROM=25, 
		KEYWORD_AS=26, KEYWORD_EXCEPT=27, AT_STYLE=28, AT_ELEMENT=29, AT_VAR=30, 
		AT_HTML=31, AT_JS=32, AT_CHTL=33, FROM=34, AS=35, LBRACE=36, RBRACE=37, 
		LBRACK=38, RBRACK=39, LPAREN=40, RPAREN=41, COLON=42, EQUAL=43, SEMI=44, 
		COMMA=45, DOT=46, HASH=47, NUMBER=48, IDENT=49, STRING=50, UNQUOTED=51, 
		NEWLINE=52, LINE_COMMENT=53, BLOCK_COMMENT=54, SPECIAL_COMMENT=55, WS=56;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_elementNode = 2, RULE_elementName = 3, 
		RULE_block = 4, RULE_blockItem = 5, RULE_textBlock = 6, RULE_blockText = 7, 
		RULE_textLine = 8, RULE_textPiece = 9, RULE_styleBlock = 10, RULE_blockStyle = 11, 
		RULE_styleItem = 12, RULE_scriptBlock = 13, RULE_blockScript = 14, RULE_scriptLine = 15, 
		RULE_scriptPiece = 16, RULE_attribute = 17, RULE_value = 18, RULE_valuePiece = 19, 
		RULE_templateUsage = 20, RULE_templateDecl = 21, RULE_customDecl = 22, 
		RULE_originDecl = 23, RULE_configurationDecl = 24, RULE_importStmt = 25, 
		RULE_importTarget = 26, RULE_importPath = 27, RULE_namespaceDecl = 28, 
		RULE_inheritStmt = 29, RULE_deleteStmt = 30, RULE_identList = 31, RULE_insertStmt = 32, 
		RULE_selector = 33, RULE_exceptStmt = 34, RULE_exceptTargetList = 35, 
		RULE_exceptTarget = 36, RULE_atType = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "elementNode", "elementName", "block", "blockItem", 
			"textBlock", "blockText", "textLine", "textPiece", "styleBlock", "blockStyle", 
			"styleItem", "scriptBlock", "blockScript", "scriptLine", "scriptPiece", 
			"attribute", "value", "valuePiece", "templateUsage", "templateDecl", 
			"customDecl", "originDecl", "configurationDecl", "importStmt", "importTarget", 
			"importPath", "namespaceDecl", "inheritStmt", "deleteStmt", "identList", 
			"insertStmt", "selector", "exceptStmt", "exceptTargetList", "exceptTarget", 
			"atType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'text'", "'style'", "'script'", "'[Template]'", "'[Custom]'", 
			"'[Origin]'", "'[Configuration]'", "'[Import]'", "'[Namespace]'", "'html'", 
			"'head'", "'body'", "'div'", "'span'", "'button'", "'inherit'", "'delete'", 
			"'insert'", "'after'", "'before'", "'replace'", "'at'", "'top'", "'bottom'", 
			"'from'", "'as'", "'except'", null, "'@Element'", "'@Var'", "'@Html'", 
			"'@JavaScript'", "'@Chtl'", null, null, "'{'", "'}'", "'['", "']'", "'('", 
			"')'", "':'", "'='", "';'", "','", "'.'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KEYWORD_TEXT", "KEYWORD_STYLE", "KEYWORD_SCRIPT_KW", "KEYWORD_TEMPLATE", 
			"KEYWORD_CUSTOM", "KEYWORD_ORIGIN", "KEYWORD_CONFIGURATION", "KEYWORD_IMPORT", 
			"KEYWORD_NAMESPACE", "KEYWORD_HTML", "KEYWORD_HEAD", "KEYWORD_BODY", 
			"KEYWORD_DIV", "KEYWORD_SPAN", "KEYWORD_BUTTON", "KEYWORD_INHERIT", "KEYWORD_DELETE", 
			"KEYWORD_INSERT", "KEYWORD_AFTER", "KEYWORD_BEFORE", "KEYWORD_REPLACE", 
			"KEYWORD_AT", "TOP_KW", "BOTTOM_KW", "KEYWORD_FROM", "KEYWORD_AS", "KEYWORD_EXCEPT", 
			"AT_STYLE", "AT_ELEMENT", "AT_VAR", "AT_HTML", "AT_JS", "AT_CHTL", "FROM", 
			"AS", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "COLON", 
			"EQUAL", "SEMI", "COMMA", "DOT", "HASH", "NUMBER", "IDENT", "STRING", 
			"UNQUOTED", "NEWLINE", "LINE_COMMENT", "BLOCK_COMMENT", "SPECIAL_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CHTL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CHTLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CHTLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 580542139531262L) != 0)) {
				{
				{
				setState(76);
				statement();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ElementNodeContext elementNode() {
			return getRuleContext(ElementNodeContext.class,0);
		}
		public TextBlockContext textBlock() {
			return getRuleContext(TextBlockContext.class,0);
		}
		public StyleBlockContext styleBlock() {
			return getRuleContext(StyleBlockContext.class,0);
		}
		public ScriptBlockContext scriptBlock() {
			return getRuleContext(ScriptBlockContext.class,0);
		}
		public TemplateDeclContext templateDecl() {
			return getRuleContext(TemplateDeclContext.class,0);
		}
		public CustomDeclContext customDecl() {
			return getRuleContext(CustomDeclContext.class,0);
		}
		public OriginDeclContext originDecl() {
			return getRuleContext(OriginDeclContext.class,0);
		}
		public ConfigurationDeclContext configurationDecl() {
			return getRuleContext(ConfigurationDeclContext.class,0);
		}
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public NamespaceDeclContext namespaceDecl() {
			return getRuleContext(NamespaceDeclContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CHTLParser.SEMI, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				elementNode();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				textBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				styleBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				scriptBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				templateDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				customDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				originDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(91);
				configurationDecl();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(92);
				importStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(93);
				namespaceDecl();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(94);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementNodeContext extends ParserRuleContext {
		public ElementNameContext elementName() {
			return getRuleContext(ElementNameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ElementNodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementNode; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitElementNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementNodeContext elementNode() throws RecognitionException {
		ElementNodeContext _localctx = new ElementNodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_elementNode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			elementName();
			setState(98);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementNameContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(CHTLParser.IDENT, 0); }
		public TerminalNode KEYWORD_HTML() { return getToken(CHTLParser.KEYWORD_HTML, 0); }
		public TerminalNode KEYWORD_HEAD() { return getToken(CHTLParser.KEYWORD_HEAD, 0); }
		public TerminalNode KEYWORD_BODY() { return getToken(CHTLParser.KEYWORD_BODY, 0); }
		public TerminalNode KEYWORD_SPAN() { return getToken(CHTLParser.KEYWORD_SPAN, 0); }
		public TerminalNode KEYWORD_DIV() { return getToken(CHTLParser.KEYWORD_DIV, 0); }
		public TerminalNode KEYWORD_BUTTON() { return getToken(CHTLParser.KEYWORD_BUTTON, 0); }
		public TerminalNode KEYWORD_SCRIPT_KW() { return getToken(CHTLParser.KEYWORD_SCRIPT_KW, 0); }
		public ElementNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitElementName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementNameContext elementName() throws RecognitionException {
		ElementNameContext _localctx = new ElementNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_elementName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 562949953485832L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(CHTLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CHTLParser.RBRACE, 0); }
		public List<BlockItemContext> blockItem() {
			return getRuleContexts(BlockItemContext.class);
		}
		public BlockItemContext blockItem(int i) {
			return getRuleContext(BlockItemContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(LBRACE);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 580550595705870L) != 0)) {
				{
				{
				setState(103);
				blockItem();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockItemContext extends ParserRuleContext {
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public ElementNodeContext elementNode() {
			return getRuleContext(ElementNodeContext.class,0);
		}
		public TextBlockContext textBlock() {
			return getRuleContext(TextBlockContext.class,0);
		}
		public StyleBlockContext styleBlock() {
			return getRuleContext(StyleBlockContext.class,0);
		}
		public ScriptBlockContext scriptBlock() {
			return getRuleContext(ScriptBlockContext.class,0);
		}
		public TemplateUsageContext templateUsage() {
			return getRuleContext(TemplateUsageContext.class,0);
		}
		public DeleteStmtContext deleteStmt() {
			return getRuleContext(DeleteStmtContext.class,0);
		}
		public InheritStmtContext inheritStmt() {
			return getRuleContext(InheritStmtContext.class,0);
		}
		public InsertStmtContext insertStmt() {
			return getRuleContext(InsertStmtContext.class,0);
		}
		public ExceptStmtContext exceptStmt() {
			return getRuleContext(ExceptStmtContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CHTLParser.SEMI, 0); }
		public BlockItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockItem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitBlockItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockItemContext blockItem() throws RecognitionException {
		BlockItemContext _localctx = new BlockItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_blockItem);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				attribute();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				elementNode();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				textBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				styleBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				scriptBlock();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				templateUsage();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(117);
				deleteStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(118);
				inheritStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(119);
				insertStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(120);
				exceptStmt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(121);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextBlockContext extends ParserRuleContext {
		public TerminalNode KEYWORD_TEXT() { return getToken(CHTLParser.KEYWORD_TEXT, 0); }
		public BlockTextContext blockText() {
			return getRuleContext(BlockTextContext.class,0);
		}
		public TextBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitTextBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextBlockContext textBlock() throws RecognitionException {
		TextBlockContext _localctx = new TextBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_textBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(KEYWORD_TEXT);
			setState(125);
			blockText();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockTextContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(CHTLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CHTLParser.RBRACE, 0); }
		public List<TextLineContext> textLine() {
			return getRuleContexts(TextLineContext.class);
		}
		public TextLineContext textLine(int i) {
			return getRuleContext(TextLineContext.class,i);
		}
		public BlockTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockText; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitBlockText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockTextContext blockText() throws RecognitionException {
		BlockTextContext _localctx = new BlockTextContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blockText);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(LBRACE);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3921957976276992L) != 0)) {
				{
				{
				setState(128);
				textLine();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextLineContext extends ParserRuleContext {
		public List<TextPieceContext> textPiece() {
			return getRuleContexts(TextPieceContext.class);
		}
		public TextPieceContext textPiece(int i) {
			return getRuleContext(TextPieceContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(CHTLParser.NEWLINE, 0); }
		public TextLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textLine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CHTLVisitor ) return ((CHTLVisitor<? extends T>)visitor).visitTextLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextLineContext textLine() throws RecognitionException {
		TextLineContext _localctx = new TextLineContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_textLine);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(136);
					textPiece();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(139); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(141);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
